update gradle wrapper

--- a/build.gradle
+++ b/build.gradle
@@ -31,12 +31,13 @@ buildscript {
     }
 }
 
+
 dependencies {
     compile gradleApi()
     compile localGroovy()
     compile "commons-io:commons-io:2.5"
-    testCompile "com.android.tools.build:gradle:2.3.3"
-    testCompile "org.scala-lang:scala-compiler:2.11.8"
+    testCompile "com.android.tools.build:gradle:3.3.0-alpha08"
+    testCompile "org.scala-lang:scala-compiler:2.11.12"
 }
 
 description "Gradle Android Scala Plugin adds scala language support to official gradle android plugin."
