--- a/sample/simple/build.gradle
+++ b/sample/simple/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:2.3.3"
+        classpath "com.android.tools.build:gradle:3.3.0-alpha08"
         classpath "jp.leafytree.gradle:gradle-android-scala-plugin:1.6"
     }
 }
@@ -44,7 +44,8 @@ android {
     }
 }
 
+
 dependencies {
-    compile "org.scala-lang:scala-library:2.11.8"
+    compile "org.scala-lang:scala-library:2.11.12"
     compile "com.android.support:multidex:1.0.1"
 }
