--- a/build.gradle
+++ b/build.gradle
@@ -33,11 +33,12 @@ buildscript {
 
 
 dependencies {
-    compile gradleApi()
-    compile localGroovy()
-    compile "commons-io:commons-io:2.5"
-    testCompile "com.android.tools.build:gradle:3.3.0-alpha12"
-    testCompile "org.scala-lang:scala-compiler:2.11.12"
+    implementation gradleApi()
+    implementation localGroovy()
+    implementation "commons-io:commons-io:2.5"
+   // implementation "com.android.tools.build:gradle:3.3.0-alpha12"
+    testImplementation "com.android.tools.build:gradle:3.3.0-alpha12"
+    testImplementation "org.scala-lang:scala-compiler:2.11.12"
 }
 
 description "Gradle Android Scala Plugin adds scala language support to official gradle android plugin."
