--- a/build.gradle
+++ b/build.gradle
@@ -37,13 +37,13 @@ dependencies {
     implementation localGroovy()
     implementation "commons-io:commons-io:2.5"
    // implementation "com.android.tools.build:gradle:3.3.0-alpha12"
-    testImplementation "com.android.tools.build:gradle:3.3.0-alpha12"
+    testImplementation "com.android.tools.build:gradle:3.3.2"
     testImplementation "org.scala-lang:scala-compiler:2.11.12"
 }
 
 description "Gradle Android Scala Plugin adds scala language support to official gradle android plugin."
 group = "com.github.AllBus"
-version = "3.0.0-SNAPSHOT"
+version = "3.3.2-SNAPSHOT"
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
