support gradle 5.3 now sourceSet for scala like sourceSet for java

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ apply plugin: "signing"
 apply plugin: "idea"
 
 repositories {
+    google()
     jcenter()
     mavenCentral()
 }
@@ -36,14 +37,15 @@ dependencies {
     implementation gradleApi()
     implementation localGroovy()
     implementation "commons-io:commons-io:2.5"
-   // implementation "com.android.tools.build:gradle:3.3.0-alpha12"
+    implementation "com.android.tools.build:gradle:3.3.2"
     testImplementation "com.android.tools.build:gradle:3.3.2"
     testImplementation "org.scala-lang:scala-compiler:2.11.12"
+    testImplementation 'junit:junit:4.12'
 }
 
 description "Gradle Android Scala Plugin adds scala language support to official gradle android plugin."
 group = "com.github.AllBus"
-version = "3.3.2-SNAPSHOT"
+version = "3.3.2"
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
@@ -96,12 +98,12 @@ uploadArchives {
 
 task groovydocJar(type: Jar, dependsOn: groovydoc) {
     from groovydoc.destinationDir
-    classifier = "javadoc"
+    classifier ( "javadoc")
 }
 
 task sourceJar(type: Jar) {
     from sourceSets.main.allSource
-    classifier = "sources"
+    classifier ( "sources")
 }
 
 artifacts {
