--- a/sample/libproject/build.gradle
+++ b/sample/libproject/build.gradle
@@ -1,12 +1,13 @@
 buildscript {
     repositories {
+        google()
         jcenter()
         mavenCentral()
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:2.3.3"
-        classpath "jp.leafytree.gradle:gradle-android-scala-plugin:1.6"
+        classpath "com.android.tools.build:gradle:3.3.2"
+        classpath "jp.leafytree.gradle:gradle-android-scala-plugin:3.3.2"
     }
 }
 
